--- a/packages/Recognizers/CustomQuestionAnswering/js/package.json
+++ b/packages/Recognizers/CustomQuestionAnswering/js/package.json
@@ -17,10 +17,10 @@
     	"lint": "eslint . --ext .js,.ts"
     },
 	"keywords": [
-        "bots",
-        "chatbots",
         "msbot-component",
-        "msbot-recognizer"
+        "msbot-recognizer",
+        "botframework",
+        "botbuilder"
     ],
     "files": [
         "schemas",
@@ -29,26 +29,26 @@
     ],
     "main": "lib/index.js",
     "dependencies": {
-        "adaptive-expressions": "4.18.0",
-        "botbuilder": "4.18.0",
-        "botbuilder-ai": "4.18.0",
-        "botbuilder-dialogs": "4.18.0",
-        "botbuilder-dialogs-adaptive-runtime": "4.18.0-preview",
-        "botbuilder-dialogs-adaptive-runtime-core": "4.18.0-preview",
-        "botbuilder-dialogs-adaptive-runtime-integration-express": "4.18.0-preview"
+        "adaptive-expressions": "~4.19.1",
+        "botbuilder": "~4.19.1",
+        "botbuilder-ai": "~4.19.1",
+        "botbuilder-dialogs": "~4.19.1",
+        "botbuilder-dialogs-adaptive-runtime": "~4.19.1-preview",
+        "botbuilder-dialogs-adaptive-runtime-core": "~4.19.1-preview",
+        "botbuilder-dialogs-adaptive-runtime-integration-express": "~4.19.1-preview"
     },
     "devDependencies": {
 	    "@tsconfig/recommended": "^1.0.1",
 	    "@types/lodash": "^4.14.168",
 	    "@typescript-eslint/eslint-plugin": "^4.28.2",
 	    "@typescript-eslint/parser": "^4.28.2",
-	    "adaptive-expressions": "4.18.0",
-	    "botbuilder": "4.18.0",
-	    "botbuilder-dialogs": "4.18.0",
-	    "botbuilder-dialogs-adaptive": "4.18.0-preview",
-	    "botbuilder-dialogs-adaptive-runtime-core": "4.18.0-preview",
-	    "botbuilder-dialogs-declarative": "4.18.0-preview",
-	    "botframework-connector": "4.18.0",
+	    "adaptive-expressions": "4.19.1",
+	    "botbuilder": "4.19.1",
+	    "botbuilder-dialogs": "4.19.1",
+	    "botbuilder-dialogs-adaptive": "4.19.1-preview",
+	    "botbuilder-dialogs-adaptive-runtime-core": "4.19.1-preview",
+	    "botbuilder-dialogs-declarative": "4.19.1-preview",
+	    "botframework-connector": "4.19.1",
 	    "eslint": "^7.30.0",
 	    "eslint-plugin-prettier": "latest",
 	    "lodash": "^4.17.21",
