--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "workspaces": [
     "generators/*",
     "packages/*",
-    "packages/*/js",
+    "packages/**/js",
     "skills/declarative/*",
     "tests/**/js",
     "!tests/functional"
