--- a/tests/unit/packages/Recognizers/dotnet/Microsoft.Bot.Components.Recognizers.CLURecognizer.Tests.Unit.csproj
+++ b/tests/unit/packages/Recognizers/dotnet/Microsoft.Bot.Components.Recognizers.CLURecognizer.Tests.Unit.csproj
@@ -1,16 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <IsPackable>false</IsPackable>
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\..\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
-    <DelaySign>true</DelaySign>
+	<PropertyGroup>
+      <TargetFramework Condition="'$(BuildTarget)' == 'net6'">net6.0</TargetFramework>
+	  <TargetFrameworks Condition="'$(BuildTarget)' == ''">net6.0</TargetFrameworks>
+	  <IsPackable>false</IsPackable>
+	  <Configurations>Debug;Release</Configurations>
+	  <LangVersion>latest</LangVersion>
+      <Nullable>enable</Nullable>
+      <IsPackable>false</IsPackable>
+      <SignAssembly>True</SignAssembly>
+      <AssemblyOriginatorKeyFile>..\..\..\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+      <DelaySign>true</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.19.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.19.3" />
     <PackageReference Include="FluentAssertions" Version="6.9.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="NSubstitute" Version="4.4.0" />
